# PatchPilot

./: .env.example  .gitignore  .patchpilot.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agents/: __init__.py  audit.py  repair.py  triage.py  verify.py
cli/: __init__.py  main.py  orchestrator.py
deployments/zeabur/: README.md
docs/examples/: ledger.json
shared/: __init__.py  classifier.py  github.py  models.py  patch_applier.py  policy.py  prompts.py  redactor.py
tests/: test_classifier.py  test_classifier_multilang.py  test_orchestrator.py  test_patch_applier.py  test_policy.py  test_prompts.py  test_redactor.py
webhook/: __init__.py  github.py
